Prevent X-scroll on small screens
html overflow-x must be hidden to prevent accidental x-scroll on small screens. This is more apparent with touch screens, where the user often gestures diagonally instead of a true vertical gesture.

--- a/examples/offcanvas/offcanvas.css
+++ b/examples/offcanvas/offcanvas.css
@@ -2,6 +2,9 @@
  * Style tweaks
  * --------------------------------------------------
  */
+html {
+  overflow-x: hidden;
+}
 body {
   padding-top: 70px;
 }
